--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   --color-light-2: #f9fbfe;
   --color-light-3: #ecf0f7;
   --color-code: #1979ca;
+  --color-nav: #1464a5;
   --color-note-1: #2a86a3;
   --color-note-2: #e6f8fd;
   --color-warning-1: #e1c542;
@@ -29,18 +30,17 @@ html {
 body {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   line-height: 1.8;
   color: var(--color-dark-3);
   background-color: var(--color-light-1);
-  padding: 1.2rem 2.4rem 2.4rem 2.4rem;
 }
 
 header {
   color: var(--color-dark-2);
   font-size: 3rem;
   font-weight: 600;
-  padding-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 ul {
@@ -62,7 +62,11 @@ a {
 
 a:link,
 a:visited {
-  color: var(--color-note-1);
+  color: var(--color-code);
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 code,
@@ -82,6 +86,63 @@ code {
   padding: 0 3px;
 }
 
+.navbar {
+  position: fixed;
+  min-width: 320px;
+  top: 0;
+  left: 0;
+  width: 340px;
+  height: 100%;
+  border-right: 1px solid var(--color-light-3);
+  padding: 1rem 3rem 0 3rem;
+  background-color: var(--color-light-2);
+  overflow: auto;
+}
+
+.navbar li {
+  margin-bottom: 1.2rem;
+  border-bottom: 1px solid var(--color-light-3);
+}
+
+.navbar li a {
+  color: var(--color-nav);
+}
+
+@media only screen and (max-width: 1020px) {
+  .navbar {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    max-height: 420px;
+    border: none;
+    z-index: 1;
+    border-bottom: 1px solid var(--color-light-3);
+  }
+
+  .navbar li {
+    border: none;
+  }
+}
+
+.navbar a:hover {
+  color: var(--color-dark-2);
+  text-decoration: none;
+}
+
+.main-doc {
+  position: absolute;
+  margin-left: 340px;
+  padding: 0 3rem;
+}
+
+@media only screen and (max-width: 1020px) {
+  .main-doc {
+    position: relative;
+    margin-left: 0;
+    margin-top: 430px;
+  }
+}
+
 .main-section {
   margin-top: 1rem;
 }
@@ -93,7 +154,6 @@ code {
 .main-section ol,
 .main-section ul {
   padding-left: 4rem;
-  max-width: 70rem;
 }
 
 .notecard {
@@ -135,7 +195,6 @@ code {
 }
 
 .table {
-  width: 100%;
   margin: 4.5rem 0;
   font-size: 1.7rem;
 }
@@ -153,4 +212,11 @@ code {
 
 .table thead th {
   background-color: var(--color-note-2);
+}
+
+@media only screen and (max-width: 700px) {
+  .table thead th:last-child,
+  .table tbody tr td:last-child {
+    display: none;
+  }
 }
